# chaptersmith

./: .gitignore  LICENSE  README.md  pyproject.toml  tmp.txt
data/inside-the-investments-of-warren-buffett/: chapters_index.json
data/inside-the-investments-of-warren-buffett/book/: manifest.json
data/inside-the-investments-of-warren-buffett/chapters/: acknowledgments-2.md  acknowledgments.md  appendix-a.md  appendix-b.md  chapter-1-1958-sanborn-map-company.md  chapter-10-1977-the-buffalo-evening-news.md  chapter-11-1983-nebraska-furniture-mart.md  chapter-12-1985-capital-citiesabc.md  chapter-13-1987-salomon-inc-preferred-stock-investments.md  chapter-14-1988-coca-cola.md  chapter-15-1989-us-air-group.md  chapter-16-1990-wells-fargo.md  chapter-17-1998-general-re.md  chapter-18-1999-midamerican-energy-holdings-company.md  chapter-19-2007-2009-burlington-northern.md  chapter-2-1961-dempster-mill-manufacturing-company.md  chapter-20-2011-ibm.md  chapter-21-evolution-of-buffetts-investment-strategy.md  chapter-22-what-we-can-learn-from-buffett.md  chapter-3-1964-texas-national-petroleum-company.md  chapter-4-1964-american-express.md  chapter-5-1965-berkshire-hathaway.md  chapter-6-1967-national-indemnity-company.md  chapter-7-1972-sees-candies.md  chapter-8-1973-the-washington-post.md  chapter-9-1976-geico-government-employees-insurance-company.md  cover.md  index.md  introduction.md  notes.md  publishers-since-1893.md  selected-bibliography.md  title-page.md  to-my-love-nora-and-our-beautiful-daughter-lily.md
data/isc2-cissp-certified-information-systems-security-professional-official-study-guide/: chapters_index.json
data/isc2-cissp-certified-information-systems-security-professional-official-study-guide/book/: manifest.json
data/isc2-cissp-certified-information-systems-security-professional-official-study-guide/chapters/: about-the-authors.md  about-the-technical-editors.md  acknowledgments.md  addressing-personnel-safety-and-security.md  analyzing-network-traffic.md  answers-to-assessment-test.md  application-attacks.md  application-security-controls.md  applied-cryptography.md  apply-foundational-security-operations-concepts.md  apply-resource-protection.md  apply-security-principles-to-site-and-facility-design.md  arp-concerns.md  assess-and-mitigate-the-vulnerabilities-of-security-architectures-designs-and-solution-elements.md  assessment-test.md  asymmetric-cryptography.md  asymmetric-key-management.md  automating-incident-response.md  building-a-security-assessment-and-testing-program.md  business-impact-analysis.md  categories-of-laws.md  cellular-networks.md  chapter-1-security-governance-through-principles-and-policies-2.md  chapter-1-security-governance-through-principles-and-policies.md  chapter-10-physical-security-requirements-2.md  chapter-10-physical-security-requirements.md  chapter-11-secure-network-architecture-and-components-2.md  chapter-11-secure-network-architecture-and-components.md  chapter-12-secure-communications-and-network-attacks-2.md  chapter-12-secure-communications-and-network-attacks.md  chapter-13-managing-identity-and-authentication-2.md  chapter-13-managing-identity-and-authentication.md  chapter-14-controlling-and-monitoring-access-2.md  chapter-14-controlling-and-monitoring-access.md  chapter-15-security-assessment-and-testing-2.md  chapter-15-security-assessment-and-testing.md  (+247 more)
prompts/: extractor_prompt.md  extractor_prompt_v2.md
scripts/: combine_mybooks.sh  export_project_md.sh
src/chaptersmith/: __init__.py  chapter_bundler.py  cli.py  ingest_epub.py  ingest_fb2.py  ingest_html_md.py  models.py  normalize.py  profiles.py  selection.py  tokenize_count.py
tests/: test_bundler.py  test_cli.py  test_epub_split.py  test_html_md_split.py
